Fix building errors in windows

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -29,11 +29,11 @@ RUN RELEASE=$(lsb_release -cs) && apt-get update && wget --quiet -O - https://ww
 # && su - postgres -c "echo 'localhost:5432:test_db:test_l2:password' > .pgpass;createuser test_l2;createdb test_db -O test_l2"
 
 
-RUN apt install dirmngr gnupg apt-transport-https software-properties-common ca-certificates curl \
+RUN apt install -y dirmngr gnupg apt-transport-https software-properties-common ca-certificates curl \
 && curl -fsSL https://www.mongodb.org/static/pgp/server-4.2.asc | sudo apt-key add - \
 && add-apt-repository 'deb https://repo.mongodb.org/apt/debian buster/mongodb-org/4.2 main' \
 && apt update \
-&& apt install mongodb-org \
+&& apt install -y mongodb-org \
 && systemctl enable mongod --now \
 && mkdir -p /data/mongodb
 
